[package]
name = "sras-cli"
version = "0.1.0"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
edition = "2018"

[dependencies]
byteorder = "1.4"
clap = "3.0.0-beta.2"
minifb = "0.19"
serialport = "4.0"
rustyline = "8.0"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.0"
toml = "0.5"
